// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the FeedItemCard CategoryLabel component should render 1`] = `
<View
  flexed={false}
  style={
    Object {
      "alignItems": "center",
      "flex": null,
      "flexDirection": "row",
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="21.6"
    bbWidth="21.6"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
        false,
        Object {
          "flex": 0,
          "height": 21.6,
          "width": 21.6,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
  >
    <RNSVGPath
      d="M3.82 13.5H2v-.32C2 6.54 5.22 2 12 2c6.5 0 9.64 4.16 9.98 10.42v1.07h-1.82v-1c-.3-5.8-3.02-8.8-8.16-8.8-5.37 0-8.18 3.32-8.18 9.45v.3zm0 1.7h1.6c.87 0 1.58.66 1.58 1.48v2.13c0 .86-.7 1.5-1.6 1.5-.87 0-1.58-.64-1.58-1.5v-3.6zm0-1.7h1.6c1.87 0 3.4 1.42 3.4 3.18v2.13c0 1.8-1.53 3.2-3.4 3.2C3.5 22 2 20.6 2 18.8v-5.3h1.82zm16.36 1.7v3.6c0 .83-.7 1.5-1.6 1.5-.87 0-1.58-.67-1.58-1.5v-2.1c0-.82.7-1.5 1.6-1.5h1.58zm0-1.7H22v5.3c0 1.77-1.53 3.2-3.4 3.2-1.9 0-3.42-1.43-3.42-3.2v-2.1c0-1.76 1.53-3.2 3.4-3.2h1.6z"
      fill={
        Array [
          0,
          0.3137254901960784,
          0.3137254901960784,
          0.3137254901960784,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
  </RNSVGSvgView>
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#505050",
          "fontFamily": "OpenSans-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
        }
      }
    >
      Default
    </Text>
  </View>
</View>
`;

exports[`the FeedItemCard CategoryLabel component should render a custom icon 1`] = `
<View
  flexed={false}
  style={
    Object {
      "alignItems": "center",
      "flex": null,
      "flexDirection": "row",
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="21.6"
    bbWidth="21.6"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
        false,
        Object {
          "flex": 0,
          "height": 21.6,
          "width": 21.6,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
  >
    <RNSVGPath
      d="M13.13 20.2h-2.26l1.4-1.4.03-.02.03-.03c6.37-5.6 8.06-7.67 8.06-10.27 0-2.2-1.7-3.9-3.9-3.9-1.23 0-2.48.6-3.28 1.54L12 7.57l-1.23-1.45C9.97 5.18 8.72 4.6 7.5 4.6c-2.2 0-3.9 1.67-3.9 3.88 0 2.6 1.7 4.66 8.07 10.27l.03.03.04.03 1.4 1.4zM10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
      fill={
        Array [
          0,
          0.3137254901960784,
          0.3137254901960784,
          0.3137254901960784,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
  </RNSVGSvgView>
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#505050",
          "fontFamily": "OpenSans-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
        }
      }
    >
      Default
    </Text>
  </View>
</View>
`;

exports[`the FeedItemCard CategoryLabel component should render a skeleton view 1`] = `
<View
  flexed={false}
  style={
    Object {
      "alignItems": "center",
      "flex": null,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#dddddd",
        "borderRadius": 6,
        "height": 21.6,
        "width": 21.6,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#dddddd",
          "borderRadius": 6,
          "height": 14,
          "marginVertical": 0.8899999999999997,
          "width": "40%",
        }
      }
    />
  </View>
</View>
`;
